--- a/composer.json
+++ b/composer.json
@@ -12,8 +12,12 @@
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^9.19",
         "laravel/sanctum": "^3.0",
+        "laravel/socialite": "^5.6",
         "laravel/tinker": "^2.7",
-        "laravel/ui": "^4.2"
+        "laravel/ui": "^4.2",
+        "orchestra/parser": "^7.0",
+        "socialiteproviders/facebook": "^4.1",
+        "socialiteproviders/github": "^4.1"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.7",
